cquery works now

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
         "initializationOptions": {
-                "cacheDirectory": "/tmp/lsp"
+                "cacheDirectory": "/tmp/lsp/cquery"
         }
 }
